cmake_minimum_required(VERSION 3.16)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(perfect_rectangles perfect_rectangles_391.cpp)
add_executable(116 116.cpp)
add_executable(114 114.cpp)
add_executable(94 94.cpp)
add_executable(124 124binary_tree_max.cpp)
add_executable(binaryTreeLevelOrder binaryTreeLevelOrder.cpp)